tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__UnleashedthePowe-AAAAAAAAAAAAAAAAAAABRA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 324,
  "prerequisites": [
    321
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make use of your tool to its full extent, you'll have to unleash its hidden power. This is not an easy task; But it's well worth the effort!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Unleashed the Power - Sword",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    321
  ],
  "rewards": [],
  "tasks": []
}
